...
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m2X-4j-O9H">
                    <rect key="frame" x="191" y="79" width="151" height="34"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="151" id="93y-j9-WG4"/>
                    </constraints>
                    <state key="normal" title="Add new TODO">
                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    </state>
                    <connections>
                        <action selector="actionBtnAddNewTodo:" destination="-1" eventType="touchUpInside" id="i6L-be-rHT"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIz-GV-3CV">
                    <rect key="frame" x="16" y="79" width="76" height="34"/>
                    <state key="normal" title="Sorted">
                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="actionSortedElements:" destination="-1" eventType="touchUpInside" id="Sno-ah-thc"/>
                    </connections>
                </button>
...
